[package]
name = "reciprocity_bot"
version = "0.1.0"
authors = ["Autumnal <friedrich122112@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "^0"
log = "^0"
futures = "^0"
arc-swap = "^1"
anyhow = "^1"
thiserror = "^1"
serde_json = "^1"
serde_yaml = "^0"
serde = { version = "^1", features = ["derive"] }
arraydeque = "^0"
tokio-tungstenite = "^0"
strum = "^0"
strum_macros = "^0"
tokio-stream = "^0"
rand = "^0"

tokio = { version = "^1", features = ["rt-multi-thread", "time", "sync"] }
serenity = { version = "^0", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "voice", "extras", "collector"]}
songbird = { version = "^0", default-features = false, features = ["serenity-rustls", "gateway"]}
lavalink-rs = {git = "https://gitlab.com/nitsuga5124/lavalink-rs", branch = "master", features = ["serenity", "rustls"]}